--- a/requirements.txt
+++ b/requirements.txt
@@ -22,10 +22,10 @@ pytz==2020.1
 requests==2.24.0
 scikit-learn==0.23.1
 scipy
-six==1.15.0
-sklearn==0.0
-text-unidecode==1.3
-threadpoolctl==2.1.0
-tqdm==4.47.0
-urllib3==1.24.3
-Werkzeug==1.0.1
+six
+sklearn
+text-unidecode
+threadpoolctl
+tqdm
+urllib3
+Werkzeug
